--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "bck-linux-setup",
-	"version": "1.0.0",
+	"version": "0.1.0",
 	"description": "CLI tool for executing commands on remote Beckhoff RT Linux® devices via SSH with APT proxy support",
 	"main": "src/index.ts",
 	"bin": {
@@ -29,6 +29,11 @@
 	"bugs": {
 		"url": "https://github.com/sgorsh/bck-linux-setup/issues"
 	},
+	"files": [
+		"src/**/*",
+		"README.md",
+		"LICENSE"
+	],
 	"engines": {
 		"bun": ">=1.3.0"
 	},
