--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "bck-linux-setup",
-	"version": "0.1.0",
+	"version": "0.1.1",
 	"description": "CLI tool for executing commands on remote Beckhoff RT Linux\u00c2\u00ae devices via SSH with APT proxy support",
 	"main": "src/index.ts",
 	"bin": {
@@ -36,6 +36,7 @@
 	"engines": {
 		"bun": ">=1.3.0"
 	},
+	"dependencies": {},
 	"devDependencies": {
 		"@types/bun": "latest",
 		"typescript": "^5.0.0"
